Türkçe dil desteği eklendi

--- a/plugin/locale/it/LC_MESSAGES/WeatherPlugin.po
+++ b/plugin/locale/it/LC_MESSAGES/WeatherPlugin.po
@@ -94,12 +94,8 @@ msgstr "WeatherPlugin: Modificare voce"
 msgid "WeatherPlugin: List of Entries"
 msgstr "WeatherPlugin: elenco voci"
 
-msgid ""
-"You need to enter a valid city name before you can search for the location "
-"code."
-msgstr ""
-"Occorre inserire un nome di città valido prima di effettuare una riceca per "
-"codice  località."
+msgid "You need to enter a valid city name before you can search for the location code."
+msgstr "Occorre inserire un nome di città valido prima di effettuare una riceca per codice  località."
 
 msgid "imperial system"
 msgstr "Sistema anglosassone"
