--- a/plugin/locale/de/LC_MESSAGES/WeatherPlugin.po
+++ b/plugin/locale/de/LC_MESSAGES/WeatherPlugin.po
@@ -97,12 +97,8 @@ msgstr "Wetterinformationen: Eintrag bearbeiten"
 msgid "WeatherPlugin: List of Entries"
 msgstr "Wetterinformationen: Liste der Einträge"
 
-msgid ""
-"You need to enter a valid city name before you can search for the location "
-"code."
-msgstr ""
-"Es muss ein Stadtnamen eingeben werden bevor man nach dem Location-Code "
-"suchen kann."
+msgid "You need to enter a valid city name before you can search for the location code."
+msgstr "Es muss ein Stadtnamen eingeben werden bevor man nach dem Location-Code suchen kann."
 
 msgid "imperial system"
 msgstr "Englisches Maßsystem"
